# PhoneBook

./: .gitignore  README.md  pyproject.toml  requirements.txt
PhoneBook/: __init__.py  config.py  model.py
PhoneBook/static/styles/: add_contact_style.css  create_account_style.css  delete_contact_style.css  edit_account_style.css  login_style.css  main_page_style.css  update_contact_style.css  view_contacts_style.css
PhoneBook/templates/: add_contact.html  create_account.html  delete_contact.html  edit_account.html  login_page.html  main_page.html  update_contact.html  user_already_exists.html  view_contacts.html
PhoneBook/views/: __init__.py  account_handling.py  contact_operations.py
sql/: sample_data.sql  schema.sql
styles/: login_style.css
