[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PhoneBook"
version = "1.0.0"
dependencies = [
    "Flask"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["PhoneBook"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
